update form input

--- a/index.html
+++ b/index.html
@@ -10,25 +10,33 @@
   </head>
   <body>
 
-    <section class="Form">
+    <section class="Form my-4 mx-5">
         <div class="container">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col-lg-5">
                     <img src="./assets/images/gabe-pierce-9QU_m5EwUCo-unsplash.jpg" class="img-fluid" alt="thriftstoreite">
                     
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7 px-5 pt-5">
+                    <h1 class="font-weight-bold py-3">Client</h1>
+                    <h4> Sign into your account</h4>
                     <form>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <input type="username" placeholder="username" class="form-control">
+                                <input type="username" placeholder="username" class="form-control my-3 p-4">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <input type="password" placeholder="******" class="form-control">
+                                <input type="password" placeholder="******" class="form-control my-3 p-4">
                             </div>
                         </div>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <button type="button" class="btn1">Login</button>
+                            </div>
+                        </div>
+                        <p>Don't have an account?<a href="#">Register here</a></p>
                     </form>
                 </div>
 
