add signup page

--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>LOGIN PAGE</title>
+    <title>SIGNUP PAGE</title>
   </head>
   <body>
 
@@ -14,16 +14,21 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-5">
-                    <img src="./assets/images/gabe-pierce-9QU_m5EwUCo-unsplash.jpg" class="img-fluid" alt="thriftstoreite">
+                    <img src="./assets/images/oli-bekh-G9Ncd2F5TPY-unsplash.jpg" class="img-fluid" alt="thriftstoreite">
                     
                 </div>
                 <div class="col-lg-7 px-5 pt-5">
-                    <h1 class="font-weight-bold py-3">Hello there!</h1>
-                    <h4> Sign into your account</h4>
+                    <h1 class="font-weight-bold py-3">Nice to see you!</h1>
+                    <h4> Let's Get You Set Up</h4>
                     <form>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <input type="username" placeholder="username" class="form-control my-3 p-4">
+                                <input type="username" placeholder="Enter a username" class="form-control my-3 p-4">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <input type="email" placeholder="abc@email.com" class="form-control my-3 p-4">
                             </div>
                         </div>
                         <div class="form-row">
@@ -33,10 +38,10 @@
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <button type="button" class="btn1 mt-3 mb-5">Login</button>
+                                <button type="button" class="btn1 mt-3 mb-5">Register</button>
                             </div>
                         </div>
-                        <p>Don't have an account?<a href="./signup.html">Register here</a></p>
+                        <p>Already have an account?<a href="./index.html">Login here</a></p>
                     </form>
                 </div>
 
