--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>SIGNUP PAGE</title>
   </head>
@@ -14,7 +18,7 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-5">
-                    <img src="./assets/images/oli-bekh-G9Ncd2F5TPY-unsplash.jpg" class="img-fluid" alt="thriftstoreite">
+                    <img src="./assets/images/oli-bekh-G9Ncd2F5TPY-unsplash.jpg" class="img-fluid" alt="emptychair">
                     
                 </div>
                 <div class="col-lg-7 px-5 pt-5">
@@ -33,7 +37,7 @@
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <input type="password" placeholder="password" class="form-control my-3 p-4">
+                                <input type="password" placeholder="password" class="form-control my-3 p-4" autocomplete="on">
                             </div>
                         </div>
                         <div class="form-row">
