--- a/login.html
+++ b/login.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Google Fonts -->
+    <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>SIGNUP PAGE</title>
+    <title>LOGIN PAGE</title>
   </head>
   <body>
 
@@ -18,21 +18,16 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-5">
-                    <img src="./assets/images/oli-bekh-G9Ncd2F5TPY-unsplash.jpg" class="img-fluid" alt="emptychair">
+                    <img src="./assets/images/gabe-pierce-9QU_m5EwUCo-unsplash.jpg" class="img-fluid" alt="thriftstoreitem">
                     
                 </div>
                 <div class="col-lg-7 px-5 pt-5">
-                    <h1 class="font-weight-bold py-3">Nice to see you!</h1>
-                    <h4> Let's Get You Set Up</h4>
+                    <h1 class="font-weight-bold py-3">Hello there!</h1>
+                    <h4> Sign into your account</h4>
                     <form>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <input type="username" placeholder="Enter a username" class="form-control my-3 p-4">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-lg-7">
-                                <input type="email" placeholder="abc@email.com" class="form-control my-3 p-4">
+                                <input type="username" placeholder="username" class="form-control my-3 p-4">
                             </div>
                         </div>
                         <div class="form-row">
@@ -42,10 +37,10 @@
                         </div>
                         <div class="form-row">
                             <div class="col-lg-7">
-                                <button type="button" class="btn1 mt-3 mb-5">Register</button>
+                                <button type="button" class="btn1 mt-3 mb-5">Login</button>
                             </div>
                         </div>
-                        <p>Already have an account?<a href="./login.html">Login here</a></p>
+                        <p>Don't have an account?<a href="./signup.html">Register here</a></p>
                     </form>
                 </div>
 
