change folder structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/assets/css/landing.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 	<nav class="navbar navbar-dark fixed-top">
 		<!-- Optional -->
 
-		<!-- <a class="navbar-brand mx-auto" href="#"><img src="" alt=""></a> -->
+		<a class="navbar-brand mx-auto" href="#"><img src="" alt=""></a>
 	</nav>
 	<div class="video-background">
 		<div class="video-wrap">
