--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-dark fixed-top">
-		<!-- Optional -->
+	<!-- <nav class="navbar navbar-dark fixed-top">
+		
 
 		<a class="navbar-brand mx-auto" href="#"><img src="" alt=""></a>
-	</nav>
+	</nav> -->
+
+	<nav class="navbar navbar-light">
+		<a class="navbar-brand" href="/">Home</a>
+		<a class="navbar-brand" href="https://github.com/benkaan001" target="_">Dashboard</a>
+		<a class="navbar-brand" href="/login.html">LogIn</a>
+		<a class="navbar-brand" href="/signup.html">SignUp</a>
+		<a class="navbar-brand" href="/https://github.com/benkaan001">Logout</a>
+	  </nav>
 	<div class="video-background">
 		<div class="video-wrap">
 			<div id="video">
@@ -40,6 +48,9 @@
 		<a class="btn btn-outline-light btn-lg" href="./login.html"> GET STARTED</a>
 
 	</div>
+	<footer class="text-muted text-center" style="background-color: #e6f4fd">
+		Built with love and care for you
+	</footer>
 
 
 
