--- a/login.html
+++ b/login.html
@@ -48,6 +48,10 @@
         </div>
     </section>
 
+    <footer class="text-muted text-center">
+		Built with love and care for you
+	</footer>
+
 
     
     
